# perdure-file-raw

./: perdure-file-raw.cabal  stack.yaml
src/Database/Perdure/: RawDevice.hs
