name:           perdure-file-raw
version:        0.0.3
cabal-version:  >=1.2
build-type:     Simple
author:         Patrick

library
  hs-source-dirs:  src
  build-depends:   
    base >= 4,
    cognimeta-utils >= 0.1.6,
    mtl >=2.1.3,
    containers >=0.5.5,
    bytestring >=0.10.4,
    perdure-file == 0.0.3,
    transformers >= 0.5.2.0,
    unix
  ghc-options:     -Wall 
  exposed-modules: 
    Database.Perdure.RawDevice
 
